--- a/package.json
+++ b/package.json
@@ -1,69 +1,37 @@
 {
-  "name": "dylink-app",
-  "version": "0.1.0",
-  "private": true,
+  "name": "knowledge",
+  "version": "1.0.0",
+  "description": "Hello World!",
+  "main": "./electron/main.js",
+  "author": "Jane Doe",
+  "license": "MIT",
+  "type": "commonjs",
   "scripts": {
-    "serve": "vue-cli-service serve",
-    "build": "vue-cli-service build",
-    "lint": "vue-cli-service lint",
-    "electron:serve": "yarn serve && electron .",
-    "electron:build": "electron-builder"
+    "dev": "cross-env NODE_ENV=development concurrently \"vite\" \"electron .\"",
+    "build": "cross-env NODE_ENV=production vite build && electron-builder",
+    "preview": "vite preview",
+    "start": "concurrently vite \"electron .\""
   },
   "dependencies": {
-    "core-js": "^3.8.3",
-    "vue": "^3.2.13"
+    "concurrently": "^9.1.2",
+    "vue": "^3.5.13"
   },
   "devDependencies": {
-    "@babel/core": "^7.26.9",
-    "@babel/eslint-parser": "^7.12.16",
-    "@babel/preset-env": "^7.26.9",
-    "@vue/cli-plugin-babel": "~5.0.0",
-    "@vue/cli-plugin-eslint": "~5.0.0",
-    "@vue/cli-service": "~5.0.0",
-    "babel-loader": "^9.2.1",
-    "electron": "^34.2.0",
+    "@vitejs/plugin-vue": "^5.2.1",
     "electron-builder": "^25.1.8",
-    "eslint": "^7.32.0",
-    "eslint-plugin-vue": "^8.0.3",
+    "cross-env": "^7.0.3",
+    "electron": "^34.2.0",
     "less": "^4.2.2",
-    "less-loader": "^12.2.0"
+    "vite": "^6.1.1"
   },
-  "eslintConfig": {
-    "root": true,
-    "env": {
-      "node": true
-    },
-    "extends": [
-      "plugin:vue/vue3-essential",
-      "eslint:recommended"
-    ],
-    "parserOptions": {
-      "parser": "@babel/eslint-parser"
-    },
-    "rules": {}
-  },
-  "browserslist": [
-    "> 1%",
-    "last 2 versions",
-    "not dead",
-    "not ie 11"
-  ],
-  "main": "electron.js",
   "build": {
-    "appId": "com.example.dylink-app",
-    "productName": "dylinkApp",
-    "directories": {
-      "output": "dist_electron"
-    },
+    "appId": "com.example.myapp",
+    "productName": "MyApp",
     "files": [
-      "dist/**/*",
-      "electron.js"
+        "**/*"
     ],
-    "win": {
-      "target": [
-        "portable",
-        "zip"
-      ]
+    "directories": {
+        "output": "app"
     }
   }
 }
