--- a/electron/config.json
+++ b/electron/config.json
@@ -1,6 +1,6 @@
 {
   "placeX": 100,
   "placeY": 100,
-  "filePath": "E:\\documents\\data.json",
+  "filePath": "E:\\documents\\knowledge",
   "pageSize": 10
 }
