--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "ant-design-vue": "^4.2.6",
     "concurrently": "^9.1.2",
+    "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "4"
   },
