--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
+    "animejs": "^3.2.2",
     "ant-design-vue": "^4.2.6",
     "concurrently": "^9.1.2",
     "sqlite3": "^5.1.7",
