--- a/electron/config.json
+++ b/electron/config.json
@@ -1,6 +1,17 @@
 {
-  "placeX": 100,
-  "placeY": 100,
-  "filePath": "E:\\documents\\knowledge",
-  "pageSize": 10
+
+  "now": {
+    "placeX": 100,
+    "placeY": 100,
+    "filePath": "E:\\documents\\knowledge",
+    "minHot":"Alt+c",
+    "pageSize": 10
+  },
+  "init": {
+    "placeX": 100,
+    "placeY": 100,
+    "filePath": "E:\\documents\\knowledge",
+    "minHot":"Alt+c",
+    "pageSize": 10
+  }
 }
