--- a/package.json
+++ b/package.json
@@ -5,22 +5,29 @@
   "main": "./electron/main.js",
   "author": "Jane Doe",
   "license": "MIT",
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
     "dev": "cross-env NODE_ENV=development concurrently \"vite\" \"electron .\"",
     "build": "cross-env NODE_ENV=production vite build && electron-builder",
     "preview": "vite preview",
-    "start": "concurrently vite \"electron .\""
+    "start": "concurrently vite \"electron .\"",
+    "clear": "rimraf app"
   },
   "dependencies": {
     "@ant-design/icons-vue": "^7.0.1",
     "animejs": "^3.2.2",
     "ant-design-vue": "^4.2.6",
     "concurrently": "^9.1.2",
+    "fluent-ffmpeg": "^2.1.3",
+    "mime": "^4.0.6",
+    "mime-types": "^2.1.35",
+    "music-metadata": "^11.0.0",
+    "rimraf": "^6.0.1",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
-    "vue-router": "4"
+    "vue-router": "4",
+    "wavesurfer.js": "^7.9.1"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^5.2.1",
@@ -28,14 +35,20 @@
     "electron": "^34.2.0",
     "electron-builder": "^25.1.8",
     "less": "^4.2.2",
-    "vite": "^6.1.1"
+    "typescript": "^5.8.2",
+    "vite": "^6.1.1",
+    "vue-tsc": "^2.2.8"
   },
   "build": {
     "appId": "com.example.myapp",
-    "productName": "MyApp",
+    "productName": "mytool",
     "files": [
       "**/*"
     ],
+    "nsis": {
+      "oneClick": false,
+      "allowToChangeInstallationDirectory": true
+    },
     "directories": {
       "output": "app"
     }
