--- a/.gitignore
+++ b/.gitignore
@@ -21,5 +21,10 @@ pnpm-debug.log*
 *.njsproj
 *.sln
 *.sw?
+app/
 dist_electron/
-app/win-unpacked/
+app/builder-debug.yml
+app/MyApp 1.0.0.exe
+app/MyApp Setup 1.0.0.exe
+app/MyApp Setup 1.0.0.exe.blockmap
+.gitignore
