--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "animejs": "^3.2.2",
     "ant-design-vue": "^4.2.6",
     "concurrently": "^9.1.2",
+    "dotenv": "^16.4.7",
     "fluent-ffmpeg": "^2.1.3",
     "mime": "^4.0.6",
     "mime-types": "^2.1.35",
