--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ant-design-vue": "^4.2.6",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
+    "electron-log": "^5.3.2",
     "fluent-ffmpeg": "^2.1.3",
     "mime": "^4.0.6",
     "mime-types": "^2.1.35",
@@ -41,17 +42,39 @@
     "vue-tsc": "^2.2.8"
   },
   "build": {
+    "directories": {
+      "output": "app" 
+    },
     "appId": "com.example.myapp",
     "productName": "mytool",
     "files": [
-      "**/*"
+      "**/*",
+      "!**/*.map"  
+    ],
+    "extraResources": [
+      {
+        "from": "assets/",
+        "to": "assets/",
+        "filter": ["**/*"]
+      },
+      {
+        "from": "./.env.product",
+        "to": "./.env"
+      },
+      {
+        "from": "public",
+        "to": "public",
+        "filter": ["**/*"]
+      },
+      {
+        "from": "dist",
+        "to": "dist",
+        "filter": ["**/*"]
+      }
     ],
     "nsis": {
       "oneClick": false,
       "allowToChangeInstallationDirectory": true
-    },
-    "directories": {
-      "output": "app"
     }
   }
 }
