--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
     "vue-router": "4",
+    "vue3-draggable-resizable": "^1.6.5",
     "wavesurfer.js": "^7.9.1"
   },
   "devDependencies": {
