导航页的优化

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@ant-design/icons-vue": "^7.0.1",
     "animejs": "^3.2.2",
     "ant-design-vue": "^4.2.6",
+    "clipboardy": "^4.0.0",
     "concurrently": "^9.1.2",
     "dotenv": "^16.4.7",
     "electron-log": "^5.3.2",
@@ -28,6 +29,7 @@
     "record-audio": "^1.0.0",
     "rimraf": "^6.0.1",
     "screenshot-desktop": "^1.15.1",
+    "sortablejs": "^1.15.6",
     "sqlite3": "^5.1.7",
     "uuid": "^11.1.0",
     "vue": "^3.5.13",
