--- a/electron/userConfig.json
+++ b/electron/userConfig.json
@@ -7,7 +7,8 @@
     "filePath": "E:\\documents\\knowledge",
     "minHot":"Alt+c",
     "tomatoMusic":"",
-    "pageSize": 10
+    "pageSize": 10,
+    "cPin": "4869"
   },
   "init": {
     "placeX": 100,
@@ -17,6 +18,7 @@
     "filePath": "E:\\documents\\knowledge",
     "minHot":"Alt+c",
     "tomatoMusic":"",
-    "pageSize": 10
+    "pageSize": 10,
+    "cPin": "4869"
   }
 }
